; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/rsym/extr_rsym.c_AddStringToHash.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/rsym/extr_rsym.c_AddStringToHash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.StringHashTable = type { %struct.StringEntry** }
%struct.StringEntry = type { i8*, %struct.StringEntry*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.StringHashTable*, i32, i32, i8*)* @AddStringToHash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @AddStringToHash(%struct.StringHashTable* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.StringHashTable*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.StringEntry*, align 8
  store %struct.StringHashTable* %0, %struct.StringHashTable** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = call %struct.StringEntry* @calloc(i32 1, i32 24)
  store %struct.StringEntry* %10, %struct.StringEntry** %9, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.StringEntry*, %struct.StringEntry** %9, align 8
  %13 = getelementptr inbounds %struct.StringEntry, %struct.StringEntry* %12, i32 0, i32 2
  store i32 %11, i32* %13, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = load %struct.StringEntry*, %struct.StringEntry** %9, align 8
  %16 = getelementptr inbounds %struct.StringEntry, %struct.StringEntry* %15, i32 0, i32 0
  store i8* %14, i8** %16, align 8
  %17 = load %struct.StringHashTable*, %struct.StringHashTable** %5, align 8
  %18 = getelementptr inbounds %struct.StringHashTable, %struct.StringHashTable* %17, i32 0, i32 0
  %19 = load %struct.StringEntry**, %struct.StringEntry*** %18, align 8
  %20 = load i32, i32* %6, align 4
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds %struct.StringEntry*, %struct.StringEntry** %19, i64 %21
  %23 = load %struct.StringEntry*, %struct.StringEntry** %22, align 8
  %24 = load %struct.StringEntry*, %struct.StringEntry** %9, align 8
  %25 = getelementptr inbounds %struct.StringEntry, %struct.StringEntry* %24, i32 0, i32 1
  store %struct.StringEntry* %23, %struct.StringEntry** %25, align 8
  %26 = load %struct.StringEntry*, %struct.StringEntry** %9, align 8
  %27 = load %struct.StringHashTable*, %struct.StringHashTable** %5, align 8
  %28 = getelementptr inbounds %struct.StringHashTable, %struct.StringHashTable* %27, i32 0, i32 0
  %29 = load %struct.StringEntry**, %struct.StringEntry*** %28, align 8
  %30 = load i32, i32* %6, align 4
  %31 = zext i32 %30 to i64
  %32 = getelementptr inbounds %struct.StringEntry*, %struct.StringEntry** %29, i64 %31
  store %struct.StringEntry* %26, %struct.StringEntry** %32, align 8
  ret void
}

declare dso_local %struct.StringEntry* @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
